[gd_scene load_steps=6 format=3 uid="uid://di37drxubefgv"]

[ext_resource type="Script" path="res://scripts/chip/chip_ui.gd" id="1_mtfo4"]
<<<<<<< HEAD
[ext_resource type="Script" uid="uid://bfo7hqka752fn" path="res://scripts/chip/chip_body.gd" id="2_vcs8e"]
[ext_resource type="Script" uid="uid://bf1637k5mn0lo" path="res://scripts/timer.gd" id="3_gb0ys"]
=======
[ext_resource type="Script" uid="uid://osvk7hstwgfs" path="res://scripts/chip/chip_body.gd" id="2_vcs8e"]
[ext_resource type="Script" uid="uid://ctjt5t6g8dd0r" path="res://scripts/timer.gd" id="3_gb0ys"]
>>>>>>> dev

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_owa1i"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7nt4l"]
font_size = 15

[node name="Component" type="PanelContainer" node_paths=PackedStringArray("input_container", "output_container", "sub_chip_container", "name_tag") groups=["chip"]]
custom_minimum_size = Vector2(50, 25)
offset_right = 88.0
offset_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_owa1i")
script = ExtResource("1_mtfo4")
input_container = NodePath("Container/Inputs")
output_container = NodePath("Container/Outputs")
sub_chip_container = NodePath("Container/Chips")
name_tag = NodePath("Container/Chips/Name")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Inputs" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = -10

[node name="Chips" type="VBoxContainer" parent="Container" groups=["chip_body"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
script = ExtResource("2_vcs8e")

[node name="Name" type="Label" parent="Container/Chips"]
layout_mode = 2
size_flags_vertical = 6
label_settings = SubResource("LabelSettings_7nt4l")
horizontal_alignment = 1

[node name="Outputs" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = -10

[node name="PreciseTimer" type="Node" parent="."]
script = ExtResource("3_gb0ys")
metadata/_custom_type_script = "uid://ctjt5t6g8dd0r"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
[connection signal="renamed" from="." to="." method="_on_renamed"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exited"]
